# basic-vs-graphrag

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.sh  start.sh  start_api.sh
src/api/: Dockerfile  __init__.py  app.py  models.py
src/basic_rag/: __init__.py  base.py  loader.py  rag.py  utils.py  vector_db.py
src/data/: EU_AI_Act_All_135_QA.xlsx
src/frontend/: .env.example  Dockerfile  README.md  nginx.conf  tailwind.config.js
src/frontend/src/: App.tsx  index.css
src/frontend/src/components/: ChatInput.tsx  LoadingMessage.tsx  MarkdownRenderer.tsx  Message.tsx  SettingsSidebar.tsx  index.ts
src/frontend/src/components/ui/: button.tsx  icons.tsx  index.ts
src/frontend/src/hooks/: index.ts  useDebounce.ts  useLocalStorage.ts  useMessages.ts
src/frontend/src/lib/: api.ts  utils.ts
src/frontend/src/types/: index.ts
src/graph_rag/: __init__.py  graphdb.py
